fix clicks on ios, layout of modals on ios

--- a/src/global.scss
+++ b/src/global.scss
@@ -64,7 +64,7 @@
 
 ion-modal {
   &::part(content) {
-    height: 100px;
+    --height: auto;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
